# ksc

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  ksc.cer
src/: cloudsync.c  cloudsync.h  database.c  database.h  gui.c  gui.h  http_win.c  json_micro.c  keyhook.c  keyhook.h  keylogdb.c  keylogdb.h  ksc.rc  ksc_private.h  main.c  resource.h  ssh_sync.c  ssh_sync.h  startup.c  startup.h  telegram.c  telegram.h  tray.c  tray.h
